# Othello

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle  settings.gradle
data/: profile
data/saves/: fuck  yeet
models/: chip_white.blend
shaders/: camera.glsl  color.glsl  depth.glsl  environment.frag  environment.glsl  geometry.frag  geometry.vert  hit.glsl  image.glsl  light.glsl  lighting.frag  lighting.glsl  material.glsl  piece.glsl  quad.vert  ray.glsl  raymarch.glsl  sdf.glsl  shade.glsl  shadow.vert  sky.glsl  tonemap.frag  tonemap.glsl  upsample.glsl
src/java/othello/: AdvancedReversi.java  App.java  BasicReversi.java  TestJavaFX.java
src/java/othello/components/: SceneManager.java  SceneProvider.java
src/java/othello/events/: MoveEvent.java  SettingsEvent.java
src/java/othello/faskinen/: Bloom.java  Board2D.java  Board3D.java  BoundingRect.java  Buffer.java  Camera.java  Change.java  Context.java  Environment.java  Faskinen.java  Framebuffer.java  GBuffer.java  Lib.java  Light.java  Mat4.java  Material.java  Mesh.java  Mipchain.java  Model.java  (+15 more)
src/resources/models/: chip_black.blend  chip_black.blend1  chip_black.glb  chip_white.glb  chip_white.gltf  rock.glb  space_bhine.glb  space_black.glb  space_shine.glb  table.glb
src/resources/shaders/: environment.frag  environment.glsl  gbuffer.glsl  geometry.frag  geometry.vert  geometry_particle.vert  particle.comp  particle.glsl  poisson.glsl  tonemap.frag  upsample.frag
tools/bakery/: Cargo.toml
tools/bakery/src/: main.rs
tools/masher/: Cargo.toml
tools/masher/src/: main.rs
(+84 files in other folders)
