[package]
name = "masher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
glam = { version = "0.22", features = ["bytemuck"] }
gltf = "1.0"
